# neural-network

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.txt
mnist/: mnist_reader.py
nn/include/: helper.h  hidden_layer.h  input_layer.h  layer.h  node.h  output_layer.h  weight_matrix.h
nn/src/: CMakeLists.txt  data_reader.cpp  helper.cpp  hidden_node.cpp  input_node.cpp
src/: CMakeLists.txt  data_reader.h  hidden_layer.cpp  hidden_node.h  input_layer.cpp  input_node.h  neural_network.cpp  neural_network.h  output_layer.cpp  output_node.cpp  output_node.h  weight_matrix.cpp
test/: CMakeLists.txt  color_print.h  components_test.cpp  config2.txt  mnist_config.txt  mnist_config2.txt  mnist_config3.txt  mnist_config4.txt  mnist_config5.txt
tests/: CMakeLists.txt  mnist_test.cpp  network_test.cpp  reader_test.cpp
